# PubHubs

./: .dockerignore  .gitignore  .prettierignore  .prettierrc  CHANGELOG.md  LICENSE  README.md  ROADMAP.md  check-hubs.py  check-python3-version.py  check-versions.py  docker-compose.yaml  eslint.config.js  flake.nix  maskfile.md  package-lock.json  package.json  run-all-cleanup.sh  run-all.sh  start_test_setup.py  start_test_setup.sh
.gitlab/issue_templates/: theme_overview_issue.md  update-dependencies  update-dependencies.md
.gitlab/merge_request_templates/: default.md  merge-to-stable.md  update-dependencies
.husky/: pre-commit
cicd/: .gitlab-ci.yml
cicd/temp_testhub/: HubPage.vue  branding.css  pubhubs-theme.js
docker_irma/: Dockerfile  irmaserver.yaml  jwt.priv  jwt.pub
docker_yivi/: Dockerfile  docker-compose.yaml  irmaserver.yaml
docs/: API.md  CLIENT.md  HUB_API.md  README.md
docs/api/: GLOBAL_API.md  HUB_API.md
docs/blueprints/: .gitignore  Makefile  main.bib  main.tex
docs/deploy/: README.md  docker-compose.yaml  test_hub.log.config
docs/development/: BRANDING.md  GLOBALCLIENT_DEVELOPMENT.md  HUBCLIENT_DEVELOPMENT.md  LIVEKIT_DEPLOYMENT.md  LOCAL_DEVELOPMENT.md  PLUGINS.md  coding-guidelines.md
docs/hub_branding/: PLUGINS.md  README.md
element/: config.json
global-client/: .env  .gitignore  .prettierignore  .prettierrc  README.md  env.d.ts  index.html  jsconfig.json  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts  vue.config.js
global-client/public/: app.webmanifest  client-config.js  client-config.ts  index.html
global-client/src/: i18n.ts  main.ts  registerComponents.js  registerServiceWorker.ts  shims-vue.d.ts  yivi.ts
global-client/test/: setup-teardown-hooks.ts
hub-client/: .dockerignore  .env  .gitlab-ci.yml  .prettierignore  .prettierrc  Dockerfile  Dockerfile.branding  README.md  alias.ts  docker-compose.yaml  histoire.config.ts  index.html  install_plugins.sh  jsconfig.json  miniclient.html  nginx.conf  package-lock.json  package.json  playwright_browser_testing.py  postcss.config.cjs  rebrand.sh  start.sh  tailwind.config.js  timestamp.sh  tsconfig.json  vite.config.ts  vue.config.js
hub-client/branding/: branding.css  hub-theme.js
hub-client/plugins/: README.md
hub-client/public/: audioLevelProcessor.js  client-config.empty.js  client-config.js  client-config.js.bk  index.html
hub-client/src/: client_config.ts  console.ts  histoire-setup.ts  i18n.ts  main.ts  miniclient.ts  registerComponents.js  registerPlugins.js  registerServiceWorker.ts  shims-vue.d.ts
hub-client/test/: basic.test.ts  filters.test.ts  routes.test.ts  setup-teardown-hooks.ts  useFormInputEvents.test.ts  useFormState.test.ts
pubhubs/: .dockerignore  .gitignore  .stable.env  Cargo.toml  Dockerfile  Dockerfile.dockerignore  README.md  build.rs  default.yaml  deny.toml  package-lock.json  pubhubs.default.toml  pubhubs.default.yaml  run_garage.py  run_yivi.py  rust-toolchain.toml  test.yaml  yivi.sh  yivi.toml  yivi_jwt.pem
pubhubs/.cargo/: config.toml
pubhubs/default_policies/1/: highlights.txt  policy.txt
pubhubs/docs/assets/: rustdoc-include-katex-header.html
pubhubs/garage/: .gitignore  aws.sh  garage.toml
pubhubs/src/: attr.rs  bar.rs  config.rs  context.rs  cookie.rs  crypto.rs  data.rs  elgamal.rs  error.rs  fs.rs  hairy_ext.rs  handle.rs  hub.rs  id.rs  irma.rs  irma_proxy.rs  jwt.rs  lib.rs  main.rs  map.rs  middleware.rs  oauth.rs  oidc.rs  oidc_handler.rs  phcrypto.rs  policy.rs  pseudonyms.rs  serve.rs  translate.rs  yivi.rs  yivi_proxy.rs
pubhubs/src/api/: admin.rs  auths.rs  common.rs  discovery.rs  hub.rs  mod.rs  phc.rs  phct.rs  sealed.rs  server.rs  signed.rs  sso.rs  tr.rs  wire_compat.rs
pubhubs/src/api/wire_compat/: v3.3.0-discovery_info_resp_auths_blank.json  v3.3.0-discovery_info_resp_phc.json  v3.3.0-discovery_info_resp_transcryptor.json  v3.4.0-discovery_info_resp_auths_blank.json  v3.4.0-discovery_info_resp_phc.json  v3.4.0-discovery_info_resp_transcryptor.json
pubhubs/src/cli/: admin.rs  common.rs  doc.rs  enter.rs  mod.rs  old.rs  serve.rs  stress.rs  tools.rs
pubhubs/src/client/: core.rs  discovery.rs  for_hubs.rs  mod.rs
pubhubs/src/common/: dsa.rs  elgamal.rs  fmt_ext.rs  kem.rs  mod.rs  secret.rs  serde_ext.rs  task.rs
pubhubs/src/misc/: awc_http_connector.rs  crypto.rs  defer.rs  drop_ext.rs  error.rs  fmt_ext.rs  jwt.rs  mod.rs  net_ext.rs  object_store_ext.rs  rustls_ext.rs  serde_ext.rs  stream_ext.rs  task.rs  time_ext.rs
pubhubs/src/old/: bar.rs  config.rs  context.rs  cookie.rs  crypto.rs  data.rs  error.rs  hairy_ext.rs  middleware.rs  oidc.rs  policy.rs  pseudonyms.rs  serde_ext.rs  translate.rs  yivi.rs  yivi_proxy.rs
pubhubs/src/rlib/: jwt.rs  middleware.rs  oidc.rs
pubhubs/src/servers/: api.rs  config.rs  constellation.rs  crypto.rs  discovery.rs  host_aliases.rs  macros.rs  mod.rs  object_store.rs  run.rs  server.rs  version.rs  yivi.rs
pubhubs/src/servers/auths/: auth.rs  card.rs  keys.rs  mod.rs  server.rs  yivi.rs
pubhubs/src/servers/config/: config.rs  core.rs  host_aliases.rs  log.rs  mod.rs
pubhubs/src/servers/phc/: hub.rs  mod.rs  server.rs  user.rs  user_card.rs  user_object_store.rs  user_sso.rs
pubhubs/src/servers/transcryptor/: mod.rs  server.rs
pubhubs/static/assets/css/: front.css
pubhubs/static/assets/js/: admin.js  irma.js  yivi.js
pubhubs/static/scss/: .gitignore  _hljs-bitpowder.scss  admin.scss  package-lock.json  package.json  standard.scss  style.scss
pubhubs/static/templates_hair/: front.html  hair.html
pubhubs/static/translations/: en.json
pubhubs/tests/: integration.rs
pubhubs_hub/: .gitignore  Dockerfile  Dockerfile.dockerignore  README.md  docker-compose.yaml  requirements.txt  start.sh  start_synaps.sh  start_synapse.sh  start_testhub.py
pubhubs_hub/assets/: default_hub_settings.json
pubhubs_hub/boot/: start_hub.py  update_config.py
pubhubs_hub/matrix_test_config/: homeserver.yaml  testhub.signing.key
scripts/: check-hubs.py  check-python3-version.py  check-versions.py  run-all.sh
(+964 files in other folders)
