[package]
name = "pubhubs"
edition = "2024"
license-file = "../LICENSE"
rust-version = "1.94"

[[bin]]
name = "pubhubs"

[[test]]
name = "integration"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
# Error handling
# note:  anyhow is also used by cargo
anyhow = { version = "1.0", features = ["backtrace"] }
thiserror = { version="2.0" }

# time
humantime = { version = "2.3" }

# serde
serde = { version = "1.0", features = ["derive"] }
serde_repr = { version = "0.1" }
serde_bytes = { version = "0.11" }
serde_json = { version = "1.0" }
serde_urlencoded = { version = "0.7" }
toml = { version = "1.0" }
postcard = { version = "1.1", default-features = false, features = [ "use-std" ] }

# better hashmap/hashset, supported by serde_json & toml
indexmap = { version = "2.11", features = [ "serde" ] }

rand = { version = "0.10", features = ["sys_rng"] }
# note: object_store is used by crates.io
object_store = { version = "0.13", features = ["aws"] } 

# Yivi interaction
qrcode = { version = "0.14", default-features = false } # we only use unicode rendering
regex = { version = "1.11" }

# Web dependencies
# default features disabled: we don't use macros, cookies, ws, or response compression
actix-web = { version = "4.11", default-features = false, features = ["http2", "unicode", "compat"] }
actix-cors = { version = "0.7" }
bytes = { version = "1", features = ["serde"] }
# humantime disabled: avoids jiff dependency; use `journalctl` or `docker logs -t` for timestamps
env_logger = { version = "0.11.8", default-features = false, features = ["auto-color"] }
mime = { version = "0.3" }
log = { version = "0.4", features = ["serde"] }
tokio = { version = "1.47", features = ["rt", "macros", "rt-multi-thread", "sync", "time", "io-std"] }
tokio-stream = { version = "0.1" } # <- dev dependency of tokio itself
url = { version="2.5", features=["serde"] }

# Proxying requests to Yivi and connection check
# default features disabled: we don't need cookies or response decompression
awc = { version = "3.8", default-features = false, features = ["rustls-0_23-webpki-roots"] }

# RustCrypto packages
aead = { version = "0.5", features=["getrandom"] }
base16ct = { version = "1.0", features = ["alloc"] } # hex
base64ct = { version = "1.8", features = ["alloc"] }
chacha20poly1305 = { version = "0.10" }
curve25519-dalek = { version = "4.1.3", features = ["rand_core", "digest", "serde", "zeroize"] }
ed25519-dalek = { version = "2.2", features = ["rand_core", "serde"] }
rsa = { version = "0.9", features = ["sha2"] }
hmac = { version = "0.12" }
zeroize = { version = "1.8", features = [ "zeroize_derive" ] }
## From v0.11, sha2 uses digest v0.11 which conflicts with digest v0.10.7 that other packages use
sha2 = { version = "0.10" }
subtle = { version = "2.6" }
typenum = { version = "1.19" }

futures = { version = "0.3" }
futures-util = { version = "0.3" }
pin-project-lite = { version = "0.2" } # used by futures-util

# command line argument parser
clap = { version = "4.5", features = ["derive"] }

# other
git-version = { version = "0.3" }
semver = { version = "1.0" }

[dev-dependencies]
tokio = { version = "1.47", features = ["test-util"] }
tokio-test = "0.4"
